--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,6 +45,12 @@
           <div class="form-group">
             <input type="text" class="form-control" name="tipo" placeholder="Tipo">
           </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="raza" placeholder="Raza">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="telefono" placeholder="Telefono">
+          </div>
           <button class="btn btn-primary btn-block">
             Guardar 
           </button>
@@ -60,6 +66,8 @@
             <td>Localidad</td>
             <td>Edad</td>
             <td>Tipo</td>
+            <td>Raza</td>
+            <td>Teléfono dueño</td>
           </tr>
         </thead>
         <tbody>
@@ -74,7 +82,9 @@
           <td>{{animal[3]}}</td>
           <td>{{animal[2]}}</td>
           <td>{{animal[1]}} años</td>
+          <td>{{animal[6]}}</td>
           <td>{{animal[4]}}</td>
+          <td>{{animal[5]}}</td>
           <td>
             % end
             </td>
